--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <title>Indecision App</title>
   </head>
   <body>
-    Hello world!
+    <div id="app"></div>
   </body>
+  <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
+  <script src="/scripts/app.js"></script>
 </html>
